feat: enhance web dashboard with process metrics and chart optimization

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -41,6 +41,29 @@
                 </div>
             </div>
 
+            <!-- Process Metrics -->
+            <div class="metric-card">
+                <h3>Process Info</h3>
+                <div class="metric-content">
+                    <div class="metric-item">
+                        <span class="label">Process ID:</span>
+                        <span class="value" id="process-pid">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">Process Memory:</span>
+                        <span class="value" id="process-memory">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">Heap Usage:</span>
+                        <span class="value" id="heap-usage">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">Node Version:</span>
+                        <span class="value" id="node-version-info">-</span>
+                    </div>
+                </div>
+            </div>
+
             <!-- Cache Metrics -->
             <div class="metric-card">
                 <h3>Cache Performance</h3>
