feat: add error logging to dashboard and restart command

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -249,6 +249,16 @@
             </div>
         </div>
 
+        <!-- Error Logs Section -->
+        <div class="error-logs-section">
+            <h2>⚠️ Error Logs</h2>
+            <div class="error-log-container">
+                <div id="error-logs" style="max-height: 400px; overflow-y: auto;">
+                    <div class="error-log-item">No errors logged</div>
+                </div>
+            </div>
+        </div>
+
         <!-- Recent Activity -->
         <div class="activity-section">
             <h3>Recent Activity</h3>
