--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -271,6 +271,16 @@
             </div>
         </div>
 
+        <!-- Best Friends Leaderboard -->
+        <div class="leaderboard-section">
+            <h2>👥 Best Friends Leaderboard</h2>
+            <div class="leaderboard-container">
+                <div id="leaderboard" class="leaderboard-list">
+                    <div class="leaderboard-loading">Loading top users...</div>
+                </div>
+            </div>
+        </div>
+
         <!-- Database Contents Section -->
         <div class="database-section">
             <h2>💾 Database Contents (Read-Only)</h2>
