--- a/dashboard/public/demo.html
+++ b/dashboard/public/demo.html
@@ -289,6 +289,38 @@
             </div>
         </div>
 
+        <!-- Best Friends Leaderboard -->
+        <div class="leaderboard-section">
+            <h2>👥 Best Friends Leaderboard</h2>
+            <div class="leaderboard-container">
+                <div class="leaderboard-item rank-1">
+                    <div class="leaderboard-rank">1</div>
+                    <div class="leaderboard-username">diana</div>
+                    <div class="leaderboard-stat">421 interactions</div>
+                </div>
+                <div class="leaderboard-item rank-2">
+                    <div class="leaderboard-rank">2</div>
+                    <div class="leaderboard-username">alice</div>
+                    <div class="leaderboard-stat">342 interactions</div>
+                </div>
+                <div class="leaderboard-item rank-3">
+                    <div class="leaderboard-rank">3</div>
+                    <div class="leaderboard-username">eve</div>
+                    <div class="leaderboard-stat">267 interactions</div>
+                </div>
+                <div class="leaderboard-item">
+                    <div class="leaderboard-rank">4</div>
+                    <div class="leaderboard-username">bob</div>
+                    <div class="leaderboard-stat">215 interactions</div>
+                </div>
+                <div class="leaderboard-item">
+                    <div class="leaderboard-rank">5</div>
+                    <div class="leaderboard-username">charlie</div>
+                    <div class="leaderboard-stat">189 interactions</div>
+                </div>
+            </div>
+        </div>
+
         <!-- Database Contents Section (Demo Mock Data) -->
         <div class="database-section">
             <h2>💾 Database Contents (Read-Only)</h2>
