refactor(dashboard): redesign leaderboard as compact metric card showing top 4 users

--- a/dashboard/public/demo.html
+++ b/dashboard/public/demo.html
@@ -287,36 +287,30 @@
                     </div>
                 </div>
             </div>
-        </div>
 
-        <!-- Best Friends Leaderboard -->
-        <div class="leaderboard-section">
-            <h2>👥 Best Friends Leaderboard</h2>
-            <div class="leaderboard-container">
-                <div class="leaderboard-item rank-1">
-                    <div class="leaderboard-rank">1</div>
-                    <div class="leaderboard-username">diana</div>
-                    <div class="leaderboard-stat">421 interactions</div>
-                </div>
-                <div class="leaderboard-item rank-2">
-                    <div class="leaderboard-rank">2</div>
-                    <div class="leaderboard-username">alice</div>
-                    <div class="leaderboard-stat">342 interactions</div>
-                </div>
-                <div class="leaderboard-item rank-3">
-                    <div class="leaderboard-rank">3</div>
-                    <div class="leaderboard-username">eve</div>
-                    <div class="leaderboard-stat">267 interactions</div>
-                </div>
-                <div class="leaderboard-item">
-                    <div class="leaderboard-rank">4</div>
-                    <div class="leaderboard-username">bob</div>
-                    <div class="leaderboard-stat">215 interactions</div>
-                </div>
-                <div class="leaderboard-item">
-                    <div class="leaderboard-rank">5</div>
-                    <div class="leaderboard-username">charlie</div>
-                    <div class="leaderboard-stat">189 interactions</div>
+            <div class="metric-card">
+                <h3>👥 Best Friends</h3>
+                <div class="metric-content leaderboard-compact">
+                    <div class="leaderboard-row rank-1">
+                        <span class="rank-badge">1</span>
+                        <span class="user-name">diana</span>
+                        <span class="user-count">421</span>
+                    </div>
+                    <div class="leaderboard-row rank-2">
+                        <span class="rank-badge">2</span>
+                        <span class="user-name">alice</span>
+                        <span class="user-count">342</span>
+                    </div>
+                    <div class="leaderboard-row rank-3">
+                        <span class="rank-badge">3</span>
+                        <span class="user-name">eve</span>
+                        <span class="user-count">267</span>
+                    </div>
+                    <div class="leaderboard-row">
+                        <span class="rank-badge">4</span>
+                        <span class="user-name">bob</span>
+                        <span class="user-count">215</span>
+                    </div>
                 </div>
             </div>
         </div>
