--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -269,13 +269,10 @@
                     </div>
                 </div>
             </div>
-        </div>
 
-        <!-- Best Friends Leaderboard -->
-        <div class="leaderboard-section">
-            <h2>👥 Best Friends Leaderboard</h2>
-            <div class="leaderboard-container">
-                <div id="leaderboard" class="leaderboard-list">
+            <div class="metric-card">
+                <h3>👥 Best Friends</h3>
+                <div class="metric-content leaderboard-compact" id="leaderboard">
                     <div class="leaderboard-loading">Loading top users...</div>
                 </div>
             </div>
