--- a/dashboard/public/demo.html
+++ b/dashboard/public/demo.html
@@ -37,6 +37,16 @@
                 </div>
             </div>
             <div class="header-right">
+                <div class="control-buttons">
+                    <button id="git-pull-btn" class="control-btn git-pull-btn" title="Pull latest changes from GitHub (Demo - disabled)" disabled>
+                        <span class="btn-icon">⬇️</span>
+                        <span class="btn-label">Git Pull</span>
+                    </button>
+                    <button id="restart-btn" class="control-btn restart-btn" title="Restart the bot (Demo - disabled)" disabled>
+                        <span class="btn-icon">🔄</span>
+                        <span class="btn-label">Restart</span>
+                    </button>
+                </div>
                 <div class="status-indicator">
                     <span class="status-dot connected"></span>
                     <span>Connected (Demo)</span>
