--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -20,6 +20,16 @@
                 </div>
             </div>
             <div class="header-right">
+                <div class="control-buttons">
+                    <button id="git-pull-btn" class="control-btn git-pull-btn" title="Pull latest changes from GitHub">
+                        <span class="btn-icon">⬇️</span>
+                        <span class="btn-label">Git Pull</span>
+                    </button>
+                    <button id="restart-btn" class="control-btn restart-btn" title="Restart the bot">
+                        <span class="btn-icon">🔄</span>
+                        <span class="btn-label">Restart</span>
+                    </button>
+                </div>
                 <div class="status-indicator">
                     <span class="status-dot connecting" id="status-dot"></span>
                     <span id="status-text">Connecting...</span>
