fix: update database table name and improve restart endpoint for root user execution

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -294,7 +294,7 @@
             <div class="database-controls">
                 <select id="database-table-select" class="table-select">
                     <option value="">Select a table...</option>
-                    <option value="users" selected>users</option>
+                    <option value="user_stats" selected>user_stats</option>
                     <option value="conversation_history">conversation_history</option>
                     <option value="reminders">reminders</option>
                 </select>
