feat: populate slash command outputs in dashboard and fix activity log element ID

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -319,7 +319,7 @@
         <!-- Recent Activity -->
         <div class="activity-section">
             <h3>Recent Activity</h3>
-            <div class="activity-log">
+            <div id="activity-log" class="activity-log">
                 <div class="activity-item">[--:--:--] Dashboard initialized</div>
             </div>
         </div>
