Dashboard: Replace disappearing nav items with highlighted active state
- Add .active class styling to navbar items for visual highlighting instead of hiding
- Update all dashboard HTML pages to mark current page with .active class instead of display:none
- Active state shows elevated background, stronger border, and subtle shadow for clear indication
- Prevents distracting disappearing text/icons in navigation bar
- More standard and user-friendly navigation pattern

--- a/dashboard/public/database.html
+++ b/dashboard/public/database.html
@@ -102,7 +102,7 @@
     <script src="/socket.io/socket.io.js"></script>
     <script src="dashboard.js"></script>
     <script>
-        // Hide current page link from navbar
+        // Mark the current active nav item
         document.addEventListener('DOMContentLoaded', () => {
             const currentPagePath = window.location.pathname;
             const currentPageName = currentPagePath.split('/').pop() || 'index.html';
@@ -110,7 +110,7 @@
             navLinks.forEach(link => {
                 const linkHref = link.getAttribute('href');
                 if (linkHref === currentPageName || linkHref === currentPagePath.substring(1) || linkHref.includes(currentPageName)) {
-                    link.style.display = 'none';
+                    link.classList.add('active');
                 }
             });
         });
