--- a/dashboard/public/config-editor-demo.html
+++ b/dashboard/public/config-editor-demo.html
@@ -675,7 +675,7 @@ ENABLE_PI_OPTIMIZATIONS=false`
             alert('Demo: Configuration exported\n\nDownload: .env (backup timestamp)');
         }
 
-        // Hide current page link from navbar
+        // Mark the current active nav item
         document.addEventListener('DOMContentLoaded', () => {
             const currentPagePath = window.location.pathname;
             const currentPageName = currentPagePath.split('/').pop() || 'index.html';
@@ -683,7 +683,7 @@ ENABLE_PI_OPTIMIZATIONS=false`
             navLinks.forEach(link => {
                 const linkHref = link.getAttribute('href');
                 if (linkHref === currentPageName || linkHref === currentPagePath.substring(1) || linkHref.includes(currentPageName)) {
-                    link.style.display = 'none';
+                    link.classList.add('active');
                 }
             });
         });
