--- a/dashboard/public/logs-viewer-demo.html
+++ b/dashboard/public/logs-viewer-demo.html
@@ -505,7 +505,7 @@
             }
         }, 3000);
 
-        // Hide current page link from navbar
+        // Mark the current active nav item
         document.addEventListener('DOMContentLoaded', () => {
             const currentPagePath = window.location.pathname;
             const currentPageName = currentPagePath.split('/').pop() || 'index.html';
@@ -513,7 +513,7 @@
             navLinks.forEach(link => {
                 const linkHref = link.getAttribute('href');
                 if (linkHref === currentPageName || linkHref === currentPagePath.substring(1) || linkHref.includes(currentPageName)) {
-                    link.style.display = 'none';
+                    link.classList.add('active');
                 }
             });
         });
