--- a/dashboard/public/service-management-demo.html
+++ b/dashboard/public/service-management-demo.html
@@ -544,7 +544,7 @@
             console.log(`Quick action: ${actionGroup}`);
         }
 
-        // Hide current page link from navbar
+        // Mark the current active nav item
         document.addEventListener('DOMContentLoaded', () => {
             const currentPagePath = window.location.pathname;
             const currentPageName = currentPagePath.split('/').pop() || 'index.html';
@@ -552,7 +552,7 @@
             navLinks.forEach(link => {
                 const linkHref = link.getAttribute('href');
                 if (linkHref === currentPageName || linkHref === currentPagePath.substring(1) || linkHref.includes(currentPageName)) {
-                    link.style.display = 'none';
+                    link.classList.add('active');
                 }
             });
         });
