Dashboard: Change 'Log Viewer' to 'Logs' in navbar across all pages

--- a/dashboard/public/config-editor-demo.html
+++ b/dashboard/public/config-editor-demo.html
@@ -406,7 +406,7 @@
                 </a>
                 <a href="logs-viewer-demo.html" class="navbar-item navbar-item-1" title="Real-Time Log Viewer">
                     <span class="navbar-icon">📋</span>
-                    <span class="navbar-label">Log Viewer</span>
+                    <span class="navbar-label">Logs</span>
                 </a>
                 <a href="service-management-demo.html" class="navbar-item navbar-item-2" title="Service Status & Management">
                     <span class="navbar-icon">🔧</span>
