Add spacing between Recent Activity and Slash Commands sections
- Added 40px margin spacer between sections
- Improves visual separation on dashboard

--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -208,6 +208,9 @@
             </div>
         </div>
 
+        <!-- Spacer -->
+        <div style="margin-bottom: 40px;"></div>
+
         <!-- Commands Output Section -->
         <section class="commands-section">
             <h2>🎮 Slash Commands Output</h2>
