Fix validation box alignment on config page
- Set validation-box height to 400px to match textarea height
- Aligns both content and validation boxes vertically

--- a/dashboard/public/config-editor-demo.html
+++ b/dashboard/public/config-editor-demo.html
@@ -179,6 +179,7 @@
             padding: 12px;
             flex: 1;
             overflow-y: auto;
+            height: 400px;
         }
 
         .validation-box h4 {
