--- a/dashboard/public/config-editor-demo.html
+++ b/dashboard/public/config-editor-demo.html
@@ -180,6 +180,7 @@
             flex: 1;
             overflow-y: auto;
             height: 400px;
+            box-sizing: border-box;
         }
 
         .validation-box h4 {
