--- a/dashboard/public/config-editor-demo.html
+++ b/dashboard/public/config-editor-demo.html
@@ -85,12 +85,13 @@
             color: #666;
             margin-bottom: 5px;
             text-transform: uppercase;
-            font-weight: 600;
+            font-weight: 700;
+            letter-spacing: 0.5px;
         }
 
         textarea {
             width: 100%;
-            height: 400px;
+            height: 430px;
             background: #f5f5f5;
             border: 1px solid #d0d0d0;
             border-radius: 4px;
@@ -99,7 +100,7 @@
             font-size: 12px;
             padding: 12px;
             box-sizing: border-box;
-            resize: vertical;
+            resize: none;
             line-height: 1.5;
         }
 
@@ -167,9 +168,18 @@
         }
 
         .validation-panel {
-            flex: 0 0 300px;
+            flex: 0 0 280px;
             display: flex;
             flex-direction: column;
+        }
+
+        .validation-panel > h4 {
+            margin-top: 0;
+            margin-bottom: 5px;
+            color: #2c3e50;
+            font-size: 11px;
+            text-transform: uppercase;
+            font-weight: 600;
         }
 
         .validation-box {
@@ -177,10 +187,23 @@
             border: 1px solid #d0d0d0;
             border-radius: 4px;
             padding: 12px;
-            flex: 1;
             overflow-y: auto;
-            height: 400px;
+            height: 430px;
             box-sizing: border-box;
+            display: flex;
+            flex-direction: column;
+        }
+
+        .validation-box h4 {
+            margin: 0 0 8px 0;
+            color: #2c3e50;
+            font-size: 11px;
+            text-transform: uppercase;
+            font-weight: 600;
+        }
+
+        .validation-box h4:not(:first-child) {
+            margin-top: 12px;
         }
 
         .validation-box h4 {
@@ -510,13 +533,13 @@ PI_MAX_CONNECTIONS=2</textarea>
 
                 <!-- Validation Panel -->
                 <div class="validation-panel">
+                    <div class="editor-label">Validation Results</div>
                     <div class="validation-box">
-                        <h4>Validation</h4>
                         <div class="validation-status">
                             <span class="status-badge">✓ Valid Syntax</span>
                         </div>
 
-                        <h4 style="margin-top: 15px;">Warnings</h4>
+                        <h4>Warnings</h4>
                         <div class="validation-item validation-warning">
                             <strong>Line 3:</strong> PERPLEXITY_API_KEY is empty
                         </div>
@@ -524,7 +547,7 @@ PI_MAX_CONNECTIONS=2</textarea>
                             <strong>Line 2:</strong> DISCORD_BOT_TOKEN is empty
                         </div>
 
-                        <h4 style="margin-top: 15px;">Info</h4>
+                        <h4>Info</h4>
                         <div class="validation-item" style="background: rgba(135, 206, 235, 0.1); color: #90caf9; border-left: 3px solid #90caf9;">
                             <strong>Lines:</strong> 28
                         </div>
