--- a/dashboard/public/index.html
+++ b/dashboard/public/index.html
@@ -75,143 +75,7 @@
             </div>
         </nav>
 
-        <!-- System Metrics Grid (Main Content) -->
-        <div class="metrics-grid">
-            <!-- System Status -->
-            <div class="metric-card">
-                <h3>System Status</h3>
-                <div class="metric-content">
-                    <div class="metric-item">
-                        <span class="label">Uptime:</span>
-                        <span class="value" id="system-uptime">-</span>
-                    </div>
-                    <div class="metric-item">
-                        <span class="label">Memory Usage:</span>
-                        <span class="value" id="memory-usage">-</span>
-                    </div>
-                    <div class="metric-item">
-                        <span class="label">CPU Load:</span>
-                        <span class="value" id="cpu-load">-</span>
-                    </div>
-                    <div class="metric-item">
-                        <span class="label">Platform:</span>
-                        <span class="value" id="platform">-</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Process Info -->
-            <div class="metric-card">
-                <h3>Process Info</h3>
-                <div class="metric-content">
-                    <div class="metric-item">
-                        <span class="label">Process ID:</span>
-                        <span class="value" id="process-id">-</span>
-                    </div>
-                    <div class="metric-item">
-                        <span class="label">Process Memory:</span>
-                        <span class="value" id="process-memory">-</span>
-                    </div>
-                    <div class="metric-item">
-                        <span class="label">Heap Usage:</span>
-                        <span class="value" id="heap-usage">-</span>
-                    </div>
-                    <div class="metric-item">
-                        <span class="label">Node Version:</span>
-                        <span class="value" id="node-version-info">-</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Cache Performance -->
-            <div class="metric-card">
-                <h3>Cache Performance</h3>
-                <div class="metric-content">
-                    <div class="metric-item">
-                        <span class="label">Hit Rate:</span>
-                        <span class="value" id="cache-hit-rate">-</span>
-                    </div>
-                    <div class="metric-item">
-                        <span class="label">Total Requests:</span>
-                        <span class="value" id="cache-requests">-</span>
-                    </div>
-                    <div class="metric-item">
-                        <span class="label">Memory Usage:</span>
-                        <span class="value" id="cache-memory">-</span>
-                    </div>
-                    <div class="metric-item">
-                        <span class="label">Entries:</span>
-                        <span class="value" id="cache-entries">-</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Database Stats -->
-            <div class="metric-card">
-                <h3>Database Stats</h3>
-                <div class="metric-content">
-                    <div class="metric-item">
-                        <span class="label">Total Users:</span>
-                        <span class="value" id="db-users">-</span>
-                    </div>
-                    <div class="metric-item">
-                        <span class="label">Total Messages:</span>
-                        <span class="value" id="db-messages">-</span>
-                    </div>
-                    <div class="metric-item">
-                        <span class="label">Active Reminders:</span>
-                        <span class="value" id="db-active-reminders">-</span>
-                    </div>
-                    <div class="metric-item">
-                        <span class="label">Completed Reminders:</span>
-                        <span class="value" id="db-completed-reminders">-</span>
-                    </div>
-                </div>
-            </div>
-
-            <!-- Bot Activity -->
-            <div class="metric-card">
-                <h3>Bot Activity</h3>
-                <div class="metric-content">
-                    <div class="metric-item">
-                        <span class="label">Bot Uptime:</span>
-                        <span class="value" id="bot-uptime">-</span>
-                    </div>
-                    <div class="metric-item">
-                        <span class="label">Last Update:</span>
-                        <span class="value" id="last-update">-</span>
-                    </div>
-                    <div class="metric-item">
-                        <span class="label">Node Version:</span>
-                        <span class="value" id="node-version">-</span>
-                    </div>
-                    <div class="metric-item">
-                        <span class="label">Status:</span>
-                        <span class="value" id="bot-status">Running</span>
-                    </div>
-                </div>
-            </div>
-
-            <div class="metric-card">
-                <h3>👥 Best Friends</h3>
-                <div class="metric-content leaderboard-compact" id="leaderboard">
-                    <div class="leaderboard-loading">Loading top users...</div>
-                </div>
-            </div>
-        </div>
-
-        <!-- Recent Activity -->
-        <div class="activity-section">
-            <h3>Recent Activity</h3>
-            <div id="activity-log" class="activity-log">
-                <div class="activity-item">[--:--:--] Dashboard initialized</div>
-            </div>
-        </div>
-
-        <!-- Spacer -->
-        <div style="margin-bottom: 40px;"></div>
-
-        <!-- Commands Output Section -->
+        <!-- Commands Output Section (TOP) -->
         <section class="commands-section">
             <h2>🎮 Slash Commands Output</h2>
             <div class="commands-output-grid">
@@ -336,6 +200,142 @@
                 </div>
             </div>
         </section>
+
+        <!-- System Metrics Grid (Middle Content) -->
+        <div class="metrics-grid">
+            <!-- System Status -->
+            <div class="metric-card">
+                <h3>System Status</h3>
+                <div class="metric-content">
+                    <div class="metric-item">
+                        <span class="label">Uptime:</span>
+                        <span class="value" id="system-uptime">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">Memory Usage:</span>
+                        <span class="value" id="memory-usage">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">CPU Load:</span>
+                        <span class="value" id="cpu-load">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">Platform:</span>
+                        <span class="value" id="platform">-</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Process Info -->
+            <div class="metric-card">
+                <h3>Process Info</h3>
+                <div class="metric-content">
+                    <div class="metric-item">
+                        <span class="label">Process ID:</span>
+                        <span class="value" id="process-id">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">Process Memory:</span>
+                        <span class="value" id="process-memory">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">Heap Usage:</span>
+                        <span class="value" id="heap-usage">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">Node Version:</span>
+                        <span class="value" id="node-version-info">-</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Cache Performance -->
+            <div class="metric-card">
+                <h3>Cache Performance</h3>
+                <div class="metric-content">
+                    <div class="metric-item">
+                        <span class="label">Hit Rate:</span>
+                        <span class="value" id="cache-hit-rate">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">Total Requests:</span>
+                        <span class="value" id="cache-requests">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">Memory Usage:</span>
+                        <span class="value" id="cache-memory">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">Entries:</span>
+                        <span class="value" id="cache-entries">-</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Database Stats -->
+            <div class="metric-card">
+                <h3>Database Stats</h3>
+                <div class="metric-content">
+                    <div class="metric-item">
+                        <span class="label">Total Users:</span>
+                        <span class="value" id="db-users">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">Total Messages:</span>
+                        <span class="value" id="db-messages">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">Active Reminders:</span>
+                        <span class="value" id="db-active-reminders">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">Completed Reminders:</span>
+                        <span class="value" id="db-completed-reminders">-</span>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Bot Activity -->
+            <div class="metric-card">
+                <h3>Bot Activity</h3>
+                <div class="metric-content">
+                    <div class="metric-item">
+                        <span class="label">Bot Uptime:</span>
+                        <span class="value" id="bot-uptime">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">Last Update:</span>
+                        <span class="value" id="last-update">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">Node Version:</span>
+                        <span class="value" id="node-version">-</span>
+                    </div>
+                    <div class="metric-item">
+                        <span class="label">Status:</span>
+                        <span class="value" id="bot-status">Running</span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="metric-card">
+                <h3>👥 Best Friends</h3>
+                <div class="metric-content leaderboard-compact" id="leaderboard">
+                    <div class="leaderboard-loading">Loading top users...</div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Recent Activity (BOTTOM) -->
+        <div class="activity-section">
+            <h3>Recent Activity</h3>
+            <div id="activity-log" class="activity-log">
+                <div class="activity-item">[--:--:--] Dashboard initialized</div>
+            </div>
+        </div>
+
+        <!-- Spacer -->
+        <div style="margin-bottom: 40px;"></div>
     </div>
 
     <!-- Socket.IO and Dashboard Script -->
